--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,27 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tacostagram</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 </head>
 
-<body>  
-  <div>
-    <% if @current_user %>
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+  <form class="d-flex">
+    <a class="navbar-brand" href="#">Tacostagram</a>
+       <% if @current_user %>
       Logged in as: <%= @current_user["first_name"] %> |
       <a href="/logout" class="btn btn-default">Logout</a>
     <% else %>
       <a href="/login" class="btn btn-default">Login</a> |
       <a href="/users/new" class="btn btn-default">Sign Up</a>
     <% end %>
+   </form> 
+   </div>
   </div>
+</nav>
+
+
 
   <div>
     <%= flash["notice"] %>
   </div>
 
-  <div>
-    <h1>Tacostagram</h1>
-    <div>
-      <a href="/posts/new/">New Post</a>
+
+<div class="row">
+<div class="col">
+
+
+<h1>Tacostagram</h1>
+</div>
+<div class="col-md-3">
+      <a href="/posts/new/" class="btn btn-secondary ">New Post</a>
     </div>
   </div>
 
